[package]
name = "azure_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.17"
azure_identity = "0.17.0"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.2"
