[package]
name = "chat_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
lazy_static = "1.4.0"
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
tokio = { version = "1.26.0", features = ["sync"] }
