[package]
name = "clickhouse-backup-restore-client"
version = "0.1.0"
authors = ["HUO Zhengjun <firelouiszj@hotmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
clickhouse = "0.11.5"
rust-s3 = "0.33.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
