[package]
name = "clickhouse_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
opensrv-clickhouse = "0.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
