[package]
name = "docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containers-api = "0.9.0"
docker-api = "0.14"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1.28.1", features = ["rt"] }
