[package]
name = "lunar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
inquire = { version = "0.6.2", features = ["date"] }
lunardate = "0.2"
rust-ephemeris = { git = "https://github.com/tyxk8160/ephemeris.git", branch = "master" }

