[package]
name = "k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.25"
hyper-tls = "0.5.0"
k8s-openapi = { version = "0.18.0", features = ["v1_23"] }
kube = "0.82.0"
reqwest = "0.11.16"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
