[package]
name = "load_conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = { version = "0.2.3", default-features = false, features = ["yaml"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_valid = "0.16.3"
regex = "1.9.1"
