[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["url"] }
url = "2.5.7"
futures-util = "0.3.31"
