[package]
name = "polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.23.2", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list", "list_eval", "rank", "lazy_regex"]}
color-eyre = {version = "0.6.2"}
rand = {version = "0.8.5"}
reqwest = { version = "0.11.11", features = ["blocking"]}
