[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
rust-s3 = "0.33.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
