[package]
name = "web_socket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-channel = "0.3.31"
futures-util = "0.3"
names = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"