[package]
name = "web_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.164", features = ["derive"] }
lazy_static = "1.4.0"
